# thi-intp-ros

./: .gitignore  README.md
Aufzug/: CMakeLists.txt
Aufzug/src/: aufzug_controller.cpp
call_button_py/: package.xml  setup.cfg  setup.py
call_button_py/call_button_py/: call_button_function.py
call_button_py/py_srvcl/: package.xml  setup.cfg  setup.py
call_button_py/py_srvcl/py_srvcl/: service_member_function.py
call_panel/: CMakeLists.txt  package.xml
display_rs/: CMakeLists.txt  Cargo.toml  package.xml
display_rs/.cargo/: config.toml
display_rs/msg/: CallToFloor.msg  ElevatorStatus.msg
display_rs/src/: main.rs
elevator/: cgo-flags.env  go.mod  go.sum  main  tools.go
elevator/msgs/: msgs.gen.go
elevator/msgs-old/: msgs.gen.go
elevator/msgs-old/builtin_interfaces/msg/: Duration.gen.go  common.gen.go
elevator/msgs-old/elevator_msgs/msg/: CallToFloor.gen.go  ElevatorStatus.gen.go  common.gen.go
elevator/msgs-old/greeting_msgs/msg/: common.gen.go
elevator/msgs-old/std_msgs/msg/: Byte.gen.go  ColorRGBA.gen.go  Empty.gen.go  Float64.gen.go  Int8.gen.go  (+8 more)
elevator/src/: cgo-flags.env  main.go
elevator/src/msgs/: msgs.gen.go
elevator_msgs/: CMakeLists.txt  package.xml
elevator_msgs/msg/: ElevatorStatus.msg
elevator_node/: Cargo.toml
etagen_disp/etagen_display/: CMakeLists.txt  package.xml
etagen_disp/etagen_display/msg/: CallToFloor.msg
etagen_disp/etagen_display/src/: elevator_display_node.cpp
etagen_disp/src/: elevator_display_node.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
(+40 files in other folders)
